Inclusion de modelos de regresion

--- a/05_Mineria_De_Datos/Proyecto/ProyectoFinal_v2.Rmd
+++ b/05_Mineria_De_Datos/Proyecto/ProyectoFinal_v2.Rmd
@@ -37,7 +37,13 @@ if(!require(factoextra)) install.packages("factoextra",dependencies = TRUE)
 library(factoextra)
 if(!require(caTools)) install.packages("caTools",dependencies = TRUE)
 library(caTools)
+if(!require(rfm)) install.packages("rfm",dependencies = TRUE)
+library(rfm)
+if(!require(data.table)) install.packages("data.table",dependencies = TRUE)
+library(data.table)
 #Se establece el seed.
+if(!require(viridis)) install.packages("viridis",dependencies = TRUE)
+library(viridis)
 set.seed(100)
 ```
 
@@ -288,7 +294,7 @@ Los siguientes gráficos muestran el comportamiento de las ventas en el tiempo, 
 
 Para observar las ventas por día, utilizamos la variable InvoiceDay, con el fin de eliminar la hora de la venta que no es de interés para este análisis.
 
-```{r explore3,warning = FALSE}
+```{r,warning = FALSE}
 invoices <- retail %>% 
   group_by(InvoiceDay) %>%
   summarise_at(vars(Total),funs(sum(.)))
@@ -472,7 +478,7 @@ summary(datos_ge)
 
 Se agrupan las compras de los clientes por fecha.
 
-```{r explore3,warning = FALSE}
+```{r,warning = FALSE}
 historic_invoices <- datos_ge %>% 
   group_by(InvoiceDay,CustomerID) %>%
   summarise_at(vars(Total),funs(sum(.))) 
@@ -485,7 +491,7 @@ kable(head(historic_invoices,10),"html", booktabs = T)%>%
 
 Se procede a crear las varias Recency, Frecuency y Monetary
 
-```{r explore3,warning = FALSE}
+```{r,warning = FALSE}
 # Se procede a obtener la fecha de la ultima compra.
 ultima_compra <- historic_invoices %>% 
   group_by(CustomerID) %>%
@@ -559,9 +565,6 @@ head(datos)
 
 ```{r warning=FALSE}
 
-#install.packages('rfm')
-library(rfm)
-
 analysis_date <- lubridate::as_date("2006-12-31", tz = "UTC")
 rfm_result <- rfm_table_order(datos, 
                               customer_id=CustomerID, 
@@ -593,14 +596,16 @@ TODO: hablada
 
 Para realizar el clustering esta tarea se hará uso de las técnicas de agrupamiento Kmedias y Kmedoids a fin de comprar los resultados de ambas técnicas usando diferentes parámetros de K.
 
-### Regresión Logistica para la predicción del total de ventas.
+### Regresión para la predicción del total de ventas.
 
 Para el cumplimiento del objectivo de mineria "Predecir las ventas mensuales por producto a partir de los datos históricos" se hará uso de la técnica de regresión lineal simple.
 
 
-## Construcción de cada modelo.
+## Construcción de modelos
 
-### Construcción del modelo #1 (Kmedoids)
+### Modelos de agrupamiento
+
+##### Construcción del modelo #1 (Kmedoids)
 
 Para el modelo #1 se hace uso de la técnica Kmedoids.
 
@@ -614,7 +619,7 @@ RFM significa Frescura(Recency) - Frecuencia - Valor monetario. Para efectos del
 
 * Alto valor: el grupo que no queremos perder. Alto ingreso, frecuencia y baja inactividad.
 
-#### Selección de los parámetros modelo #1 (Kmedoids)
+##### Selección de los parámetros modelo #1 (Kmedoids)
 
 Para el primer modelo se analizarán las variables Total y Country.
 
@@ -653,7 +658,12 @@ TODO: Explicar que vamos a usar 3 clusters
 
 
 ```{r warning=FALSE}
-clusters_kmedoids$medoids
+# cluster al que se asignó cada individuo
+clusteres_medoids <- clusters_kmedoids$clustering
+#clusteres_medoids
+# Descripción de los clusters
+medoids <- clusters_kmedoids$medoids
+medoids
 ```
 
 TODO: Explicar los medoids
@@ -663,63 +673,130 @@ TODO: Explicar los medoids
 #which(apply(rfm_clustering, 2, var)==0)
 fviz_cluster(clusters_kmedoids,data=rfm_clustering,palette='jco')
 
-
-# cluster al que se asignó cada individuo
-clusteres_medoids <- clusters_kmedoids$clustering
-#clusteres_medoids
-# Descripción de los clusters
-medoids <- clusters_kmedoids$medoids
-medoids
 ```
 
-Dashboard: por pais
-
-CustomerId: es un factor, no considerarlo para el clustering
-
-### Construcción del modelo #2 (Regresión Lineal)
 
 
-#### Selección de los parámetros modelo #2
-
-Considerando que la predicción de los valores que se desea realizar está asociado a las ventas totales mensuales, se procedea particionar el conjunto de datos en 2 data frames para la fase de entrenamiento y de pruebas
+##### Construcción del modelo #2 (Kmeans)
 
 ```{r warning=FALSE}
-# Se dividen los datos en los dataframes de entrenamiento y pruebas
-retail$InvoiceNo <- as.numeric(retail$InvoiceNo)
-retail$Quantity <- as.numeric(retail$Quantity)
-retail$UnitPrice <- as.numeric(retail$UnitPrice)
-retail$CustomerID <- as.numeric(retail$CustomerID)
-retail$Total <- as.numeric(retail$Total)
-sample = sample.split(retail$Total, SplitRatio = .75)
-entrenamiento = subset(retail, sample == TRUE)
-prueba  = subset(retail, sample == FALSE)
+clusters <- kmeans(rfm_clustering,3,nstart=20)
+clusteres_kmeans <- clusters$cluster
+
+# crear un data frame combinando el cluster asignado y los atributos originales
+resultado_kmeans <- data.frame(clusters$cluster,rfm_clustering)
+head(resultado_kmeans)
 
 ```
 
-Se realiza la verificación de los rangos de las observaciones obtenidas a fin de verificar que el conjunto de entrenamiento, abarca el rango de precios, descripciones e incluso observaciones del clientes con el mismo CustomerId.
+De los clusteres anteriores se puede observar como la variable recency no parece tener tanta significancia y los grupos tienen a tener una relación en cuanto al valor monetario invertido por cada cliente.
+
+```{r warning=FALSE}
+#obtener cantidad de registros en cada cluster y los centroides
+descClusters<- data.frame(clusters$size,clusters$centers)
+descClusters
+```
+
+###### Descripción del modelo obtenido (Incluya al menos un gráfico)
+
+Loa gráficos siguientes nos permiten observar como en el caso de los 3 clusteres formados, los clusters que van del año 1980 al 1990 se observan más dispersos y es posible observar un valor anormal o outlier en este rango. 
+```{r warning=FALSE}
+ggplot(rfm_clustering,aes(rfm_clustering$recency_days,rfm_clustering$amount, color = clusters$cluster)) + geom_point()+ggtitle(label='Distribución por cluster') + 
+  scale_color_viridis(option = "D")
+
+```
+
+El siguiente gráfico muestra con mayor claridad el agrupamiento del cluster número 2, el cual parece agrupar a las compañias que se han mantenido por mayor tiempo en el mercado y tienen ingresos elevados.
+```{r warning=FALSE}
+# otra forma de visualizar los clusters
+fviz_cluster(clusters,data=rfm_clustering,palette='jco',ggtheme = theme_minimal())
+```
+
+
+### Modelos de regresión
+
+
+#### Selección de los parámetros
+
+Para la construccion de los modelos de regresion se trabajara con el campo InvoiceDay y los totales de ventas, a fin de realizar la agregacion de las ventas de forma mensual y a partir de estos datos generar otras variables que no sean de utilidad para la prediccion. 
+
+```{r warning=FALSE}
+compras <- datos_ge %>% 
+  group_by(InvoiceDay) %>%
+  summarise_at(vars(Total),funs(sum(.))) 
+colnames(compras) <- c('Fecha','ventas')
+kable(head(compras,10),"html", booktabs = T)%>%
+  kable_styling(latex_options = "striped")
+
+head(compras)
+
+plot(x = compras$Fecha, y = compras$ventas, 
+     main = 'Ventas Mensuales', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="l")
+
+```
+
+El siguiente paso a ejecutar es comparar la diferencia en ventas de u mes a otro.
+
+```{r warning=FALSE}
+compras_diferencia <- compras
+compras_diferencia['ventas_previas'] <- shift(compras_diferencia$ventas,n=1,fill=0)
+na.omit(compras_diferencia)
+# se procede a calcular la diferencia
+
+compras_diferencia['diferencia'] <- compras_diferencia$ventas - compras_diferencia$ventas_previas
+head(compras_diferencia)
+
+```
+
+Al analizar el comportamiento de la diferencia de las ventas a lo largo del tiempo se observa
+que el comportamiento de las mismas no pareciera tener un comportamiento estacionario, sino que se mantiene constante a lo largo del anno, exceptuando el mes de mayo, el cual es el mes en que se celebra el dia de la madre en la mayoria de paises y puede ser un indicador del incremento de las ventas durante este mes.
+
 ```{r}
-#Se comparan los datos de entrenamiento y prueba.
+plot(x = compras_diferencia$Fecha, y = compras_diferencia$diferencia, 
+     main = 'Ventas Mensuales', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="l")
+
+```
+Posterior a esto se procede a crear las variables lag, las cuales nos permiten representar como columnas las ventas y el comportamiento de las mismas durante el periodo de un anno.
+
+```{r}
+for (mes in 1:13){
+  field_name = paste('lag_',toString(mes))
+  compras_diferencia[field_name] <- shift(compras_diferencia$diferencia,n=mes,fill=0)
+}
+
+colnames(compras_diferencia) <- c('Fecha', 'Ventas', 'Ventas_previas', 'diff', 'Dic_Anno1','Ene_Anno2','Feb_Anno2','Mar_Anno2','Abr_Anno2','May_Anno2','Jun_Anno2','Jul_Anno2','Ago_Anno2','Sep_Anno2','Oct_Anno2','Nov_Anno2','Dic_Anno2')
+```
+
+```{r}
+#Se particiona el dataset en entrenamiento y prueba.
+sample = sample.split(compras_diferencia$diff, SplitRatio = .75)
+entrenamiento = subset(compras_diferencia, sample == TRUE)
+prueba  = subset(compras_diferencia, sample == FALSE)
+
 summary(entrenamiento)
 summary(prueba)
 ```
 ```{r}
-entrenamiento.variables_numericas <- entrenamiento[,c(0,1,4,6,7,9)]
-prueba.variables_numericas <- prueba[,c(0,1,4,6,7,9)]
-str(entrenamiento.variables_numericas)
-pairs(entrenamiento)
+pairs(entrenamiento[4:15])
 ```
 
 
+Se utiliza la funcion cor para identificar la correlacion entre las variables de ventas de los diferentes meses de forma numérica.
+
 ```{r}
-cor(entrenamiento.variables_numericas)
+cor(entrenamiento[4:15])
 ```
 
 
-####Modelo de Regresión lineal simple
+#### Modelo de Regresión lineal simple
 
 ```{r}
-#Se crea la regresion lineal simple para el total
-modelo.simple <- lm(Total ~ InvoiceDate , data = entrenamiento)
+#Se crea la regresion lineal simple para la diferencia de las ventas
+modelo.simple <- lm(diff ~ Dic_Anno1, data = entrenamiento)
 #ver detalle del modelo
 summary(modelo.simple)
 
@@ -739,7 +816,7 @@ hist(modelo.simple$residuals,
 
 ````{r}
 # Ver distribución de los residuos del modelo
-plot(x = entrenamiento$Total,
+plot(x = entrenamiento$diff,
      y = modelo.simple$residuals,
      main = 'Residuos del Modelo de Regresión simple en Entrenamiento',
      xlab = 'Valor',
@@ -748,53 +825,58 @@ plot(x = entrenamiento$Total,
 
 ```{r}
 #Calcular el RMSE en Entrenamiento
-predicciones.entrenamiento <- predict(modelo.simple)
 entrenamiento$Prediccion <- predict(modelo.simple)
-sqrt(mean((entrenamiento$Total - entrenamiento$Prediccion)^2))
+sqrt(mean((entrenamiento$diff - entrenamiento$Prediccion)^2))
 
-# predecir valores de mpg.mpg en el conjunto de datos de prueba
+# predecir valores de diff en el conjunto de datos de prueba
 prueba$Prediccion <- predict(modelo.simple, newdata = prueba)
 #Calcular el RMSE en prueba
-sqrt(mean((prueba$Total - prueba$Prediccion)^2))
+#sqrt(mean((prueba$diff - prueba$Prediccion)^2))
+
+entrenamiento[,c(1,4,18)]
+prueba[,c(1,4,18)]
 
 ```
 
+```{r}
+par(mfrow = c(2,1))
+plot(x = entrenamiento$Fecha, y = entrenamiento$diff, 
+     main = 'Ventas Mensuales Reales', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="o" ,col = "red")
+lines(entrenamiento$Prediccion, type = "o", col = "blue")
 
-#### Modelo Regresión Multiple
-
-````{r}
-# Para la creación del modelo de regresión múltiple se realiza un "pre-trabajo" 
-# sobre la data a utilizar a fin de evaluar la multicolinealidad entre otros factores.
-
-#Análisis visual sin la variable de respuesta
-pairs(entrenamiento.variables_numericas)
-
-#Matriz de correlación sin la variable de respuesta
-cor(entrenamiento.variables_numéricas)
-
+plot(x = entrenamiento$Fecha, y = entrenamiento$Prediccion, 
+     main = 'Ventas Mensuales Predicion', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="o" ,col = "blue")
+#lines(entrenamiento$Prediccion, type = "o", col = "blue")
 ```
 
+#### Modelos Regresión Multiple
 
+##### Modelo de regresión lineal múltiple 0 (Modelo con las 12 variables)
+A fin de reforzar los resultados del modelo de regresion lineal, se crea un modelo de regresion multiple con las variables creadas con la diferencia de las ventas de los 13 meses analizados.
 
 ````{r}
 #Para la creación del modelo 1 se empezará por un modelo "completo" 
-entrenamiento_mm <- entrenamiento.variables_numericas
-prueba_mm <- prueba.variables_numericas
-modelo.multiple0 <- lm(Total ~ . , data = entrenamiento_mm)
+modelo.multiple0 <- lm(diff ~ . , data = entrenamiento[,4:15])
 # ver el detalle del resumen
 summary(modelo.multiple0)
 
-#Para la creación del modelo 1 se empezará por un modelo "Con las variables significativas" 
-modelo.multiple1 <- lm(Total ~ CustomerID   , data = entrenamiento_mm)
-# ver el detalle del resumen
-summary(modelo.multiple1)
-
 ```
-##### Evaluación Modelo de regresión lineal múltiple
+
+Como se observa anteriormente los resultados del modelo0 muestran como las variables mas significativas son las variables de los 6 primeros meses. Por lo que se creara un modelo 2 para comparar los resultados.
+
+Por lo que se procede a crear un segundo modelo unicamente con estas variables
+
+
+###### Evaluación Modelo 0
+
 ````{r}
 #Distribución de los residuos del modelo basado en el peso
 hist(modelo.multiple0$residuals,
-     main= 'Residuos del modelo de regresión simple',
+     main= 'Distribución de residuos Modelo de Regresión Múltiple 0',
      xlab = 'Residuos',
      ylab = 'Observaciones',
      breaks = 50)
@@ -803,27 +885,107 @@ hist(modelo.multiple0$residuals,
 
 ````{r}
 # Ver distribución de los residuos del modelo
-plot(x = entrenamiento$Total,
+plot(x = entrenamiento$diff,
      y = modelo.multiple0$residuals,
-     main = 'Residuos del Modelo de Regresión simple en Entrenamiento',
+     main = 'Residuos del Modelo de Regresión Múltiple 0',
      xlab = 'Valor',
      ylab = 'Residuos')
 ````
 
 ```{r}
 #Calcular el RMSE en Entrenamiento
-predicciones.entrenamiento <- predict(modelo.multiple0)
 entrenamiento$Prediccion <- predict(modelo.multiple0)
-sqrt(mean((entrenamiento$Total - entrenamiento$Prediccion)^2))
+sqrt(mean((entrenamiento$diff - entrenamiento$Prediccion)^2))
 
 # predecir valores de mpg.mpg en el conjunto de datos de prueba
-prueba$Prediccion <- predict(modelo.multiple0, newdata = prueba)
+prueba$Prediccion <- predict(modelo.multiple0, newdata = prueba[,4:15])
 #Calcular el RMSE en prueba
-sqrt(mean((prueba$Total - prueba$Prediccion)^2))
+#sqrt(mean((prueba$diff - prueba$Prediccion)^2))
+
+entrenamiento[,c(1,4,18)]
+prueba[,c(1,4,18)]
 
 ```
 
+```{r}
+par(mfrow = c(2,1))
+plot(x = entrenamiento$Fecha, y = entrenamiento$diff, 
+     main = 'Ventas Mensuales Reales', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="o" ,col = "red")
+lines(entrenamiento$Prediccion, type = "o", col = "blue")
+
+plot(x = entrenamiento$Fecha, y = entrenamiento$Prediccion, 
+     main = 'Ventas Mensuales Predicion', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="o" ,col = "blue")
+#lines(entrenamiento$Prediccion, type = "o", col = "blue")
+```
 
 
+##### Modelo de regresión lineal múltiple 1 (Modelo con 6 variables)
+
+Por lo que se procede a crear un segundo modelo únicamente con las variables con valores significativos mostrados por el modelo 0
+
+````{r}
+#Para la creación del modelo 1 se empezará por un modelo "Con las variables significativas" 
+modelo.multiple1 <- lm(diff ~ Dic_Anno1 + Ene_Anno2 + Feb_Anno2 + Mar_Anno2 + Abr_Anno2 + May_Anno2 , data = entrenamiento[,4:15])
+# ver el detalle del resumen
+summary(modelo.multiple1)
+
+```
+
+###### Evaluación Modelo 1
+
+````{r}
+#Distribución de los residuos del modelo basado en el peso
+hist(modelo.multiple1$residuals,
+     main= 'Residuos del Modelo de Regresión Múltiple 1',
+     xlab = 'Residuos',
+     ylab = 'Observaciones',
+     breaks = 50)
+````
+
+
+````{r}
+# Ver distribución de los residuos del modelo
+plot(x = entrenamiento$diff,
+     y = modelo.multiple1$residuals,
+     main = 'Residuos del Modelo de Regresión Múltiple 1',
+     xlab = 'Valor',
+     ylab = 'Residuos')
+````
+
+```{r}
+#Calcular el RMSE en Entrenamiento
+entrenamiento$Prediccion <- predict(modelo.multiple1)
+sqrt(mean((entrenamiento$diff - entrenamiento$Prediccion)^2))
+
+# predecir valores de mpg.mpg en el conjunto de datos de prueba
+prueba$Prediccion <- predict(modelo.multiple1, newdata = prueba[,4:15])
+#Calcular el RMSE en prueba
+#sqrt(mean((prueba$diff - prueba$Prediccion)^2))
+
+entrenamiento[,c(1,4,18)]
+prueba[,c(1,4,18)]
+```
+
+###### Comparación de ventas reales vrs prediciones
+
+
+```{r}
+par(mfrow = c(2,1))
+plot(x = entrenamiento$Fecha, y = entrenamiento$diff, 
+     main = 'Ventas Mensuales Reales', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="o" ,col = "red")
+lines(entrenamiento$Prediccion, type = "o", col = "blue")
+
+plot(x = entrenamiento$Fecha, y = entrenamiento$Prediccion, 
+     main = 'Ventas Mensuales Predicion', 
+     xlab = 'Fecha', 
+     ylab = 'Ventas totales mensuales', type="o" ,col = "blue")
+#lines(entrenamiento$Prediccion, type = "o", col = "blue")
+```
 
 
